pegasus/src/Pegasus/Compiler/tests/invalidMOF/badQualifier1.mof
// This was bug 3574. Compiler accepting this input
//and sets the "Static" qualifier value to true.  However, the "True" value is 
//technically invalid for a boolean qualifier.  The MOF compiler also 
//accepts "false" for the Static qualifier value, setting the value to false.

Qualifier Static : boolean = false, 
    Scope(property, method), 
    Flavor(DisableOverride, ToSubclass);

class TST_BadQualifierDef1
{
    [Static("True")]
    uint32 MyMethod();
};
